# tamtam

./: .gitignore  LICENSE  README.md  materials.ods
STL/: arm_lower_part.stl  arm_upper_part.stl  body_back_cover.stl  body_back_cover_extra.stl  body_front_cover.stl  head_lower_part.stl  lower_leg_right.stl  right_foot.stl  right_leg_bracket.stl  rpi_protection.stl  servo_body_holder.stl  two_servo_holder.stl  upper_leg_right.stl
code/rpi/tamtam/: CMakeLists.txt  CMakeLists.txt~
code/rpi/tamtam/include/: tamtam.h
code/rpi/tamtam/src/: main.cpp  tamtam.cpp
code/simulator/: CMakeLists.txt
code/simulator/lib/include/: tamtam_simulator.h
code/simulator/lib/src/: tamtam_simulator.cpp
code/simulator/src/: simulator.cpp
code/simulator/walking_v1/: CMakeLists.txt
code/simulator/walking_v1/src/: main.cpp
code/simulator/walking_v2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  walking_v2
code/simulator/walking_v3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  walking_v3
peces/: mg90s.scad  two_servo_holder.scad
pieces/: arm_lower_part.scad  arm_upper_part.scad  body_back_cover.scad  body_back_cover_extra.scad  body_data.scad  body_front_cover.scad  head_lower_part.scad  head_upper_part.scad  lower_leg_right.scad  mg90s.scad  right_foot.scad  right_leg_bracket.scad  rpi_protection.scad  servo_body_holder.scad  two_servo_holder.scad  upper_leg_right.scad
tamtam_board/: missing_components.lib  tamtam_board-cache.lib  tamtam_board.bak  tamtam_board.kicad_pcb  tamtam_board.kicad_pcb-bak  tamtam_board.net  (+2 more)
(+67 files in other folders)
